[package]
name = "rml"
description = "A machine learning library in Rust."
version = "0.1.0"
edition = "2018"
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/jmanly56/rml"
keywords = ["machine", "ai", "knn", "scientific", "learning"]
categories = ["mathematics", "science", "text-processing"]
documentation = "https://docs.rs/rml"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rayon = "1.5.1"

[[example]]
name = "knn"


