[package]
name = "rml"
description = "A machine learning library in Rust."
version = "0.1.1"
edition = "2018"
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/jmanly56/rml"
keywords = ["machine-learning", "ai", "knn", "scientific"]
categories = ["mathematics", "science", "text-processing"]
documentation = "https://docs.rs/rml"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rayon = "1.5.1"
regex = "1.5.4"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[features]
full = ["preprocessing",]
preprocessing = []

[[bench]]
name = "csvparsing"
harness = false

[[bench]]
name = "simplefrequency"
harness = false

[[example]]
name = "knn"




